<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="welcome_to_rock_paper_scissors">Welcome to Rock-Paper-Scissors!</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="please_choose_your_weapon">Please choose your weapon:</string>
    <string name="who_will_win">Who will win?</string>
    <string name="textview">TextView</string>
    <string name="score">TextView</string>
    <string name="actualScore">TextView</string>
    <string name="player_0_computer_0">Player: 0, Computer: 0</string>
    <string name="player_s_weapon">Player\'s Weapon:</string>
    <string name="computers_weapon">Computers Weapon:</string>
</resources>